Fix page overflow on mobile
- Fix page overflow causing a horizontal scroll on mobile

--- a/nextjs/app/globals.css
+++ b/nextjs/app/globals.css
@@ -188,6 +188,10 @@
   --color-border-default: var(--alert-default-border);
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   background: var(--solid-background);
   color: var(--solid-foreground);
